syntax = "proto3";

option go_package = "github.com/ujjwal-shekhar/common/load_balancer";

service LoadBalancer {
    rpc ProcessClientRequest (ClientRequest) returns (ServerInfo) {}
    rpc ProcessServerHeartbeat (ServerInfo) returns (ServerReply) {}
}

service TaskRunner {
    rpc RunTask (ClientRequest) returns (ServerReply) {}
}

message ClientRequest {
    int32 load = 1;
}

message ServerInfo {
    string address = 1; 
    float cpu_load = 2;
    int32 task_load = 3; 
}

message ServerReply {
    bool success = 1;
}